src/css/styles.css
/**
  |============================
  | include css partials with
  | default @import url()
  |============================
*/
@import url('./reset.css');
@import url('./header.css');
@import url('./hero.css');
@import url('./about-us.css');
@import url('./catalog.css');
@import url('./new-watches.css');
@import url('./sale.css');
@import url('./footer.css');
@import url('./modal.css');

:root {
  --Dark-green: rgba(30, 40, 39, 1);
  --Black: #141414;
  --B-g-color: #fbfbfb;
  --Main-color: #ffffff;
  --Price-color: rgba(20, 20, 20, 0.5);
  --B-g-color-second: #efefef;
  --footer-agreements-color: #c6cdd1;
  --transition-dur: 500ms cubic-bezier(0.4, 0, 0.2, 1);
  --hover-focus-color: rgba(251, 251, 251, 0.5);
}

html {
  scroll-behavior: smooth;
}

body {
  color: var(--Main-color);
  font-family: 'Epilogue', sans-serif;
  font-size: 14px;
  line-height: 18px;
}

.container {
  padding: 0 20px;
  margin: 0 auto;
  max-width: 375px;
}

.section {
  padding: 40px 0;
  background-color: var(--B-g-color);
}

.no-scroll {
  overflow: hidden;
}

@media screen and (min-width: 768px) {
  .container {
    max-width: 768px;
    padding: 0 32px;
  }
  .section {
    padding: 64px 0;
  }
}

@media screen and (min-width: 1280px) {
  .container {
    max-width: calc(1176px + 64px);
  }
  .section {
    padding: 80px 0;
  }
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

@font-face {
  font-family: 'Neue Montreal';
  src: url('NeueMontreal-Regular.eot');
  src: local('Neue Montreal Regular'), local('NeueMontreal-Regular'),
    url('../fonts/NeueMontreal-Regular.eot?#iefix') format('embedded-opentype'),
    url('../fonts/NeueMontreal-Regular.woff2') format('woff2'),
    url('../fonts/NeueMontreal-Regular.woff') format('woff'),
    url('../fonts/NeueMontreal-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

body {
  margin: 0;
}

